[metadata]
name = pyhiccup
author = Nicolas Bessi
author-email = nbessi@gmail.com
summary = Library for representing HTML in Python
license = GPL3
description-file = README.rst
home-page = http://pypi.python.org/pypi/pyhiccup
requires-python = >=2.6
classifier =
Development Status :: 0.1
Environment :: Console
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python
[files]
packages = pyhiccup
